--- a/index_fr1.htm
+++ b/index_fr1.htm
@@ -1,8 +1,9 @@
 <body bgcolor="#a6d1af">
 <h1>Quake Documentation Version 3.4.1</h1>
 
-<p>Main reference.  An vain attempt to provide all Quake specifications.<br>
+<p>Main reference.  A vain attempt to provide all Quake specifications.<br>
 See also the DEM Specs, the last MAP specs, and the Quake-C functions manual.<br>
+Credit goes to authors and editors of documentation as indicated within.<br>
 Category: WIP</p>
 
 <h3>main document</h3>
@@ -27,6 +28,9 @@ Category: WIP</p>
 <ol>
 <table width="400"><td style="text-align:left"><a href="qcman10.txt">Quake-C manual</a></td><td style="text-align:right"><small>v [1.0]</small></td></table>
 </ol>
+<br>
+<br>
+Live quake developement at moddb.com <a href="http://www.moddb.com/groups/qc" target="_blank"><font color="red">Quake C forum</font></a>
 
 
 <br><br>
