--- a/index.htm
+++ b/index.htm
@@ -35,7 +35,9 @@ Category: WIP</p>
 </ol>
 <br>
 <br>
-Live quake developement at moddb.com <a href="http://www.moddb.com/groups/qc" target="_blank"><font color="red">Quake C forum</font></a>
+Live quake developement at moddb.com <a href="http://www.moddb.com/groups/qc" target="_blank"><font color="red">.QC group</font></a> --- <a href="http://www.moddb.com/groups/qc/forum" target="_blank">Forums</a>
+<br>
+Source forge hub: <a href="https://sourceforge.net/p/quake-c/" target="_blank">Quake C main</a> --- <a href="https://sourceforge.net/p/quake-c/mailman/quake-c-users/" target="_blank">Mail list</a>
 <br>
 <br>
 <hr align="left" width="666">
