--- a/qc-defs.htm
+++ b/qc-defs.htm
@@ -22,12 +22,12 @@ in defs.qc.</p>
  4    TE_TAREXPLOSION    explosion of a tarbaby
  7    TE_WIZSPIKE        wizard's hit
  8    TE_KNIGHTSPIKE     hell knight's shot hit
-10    TE_LAVASPLASH      Chthon awakes and falls dead
+10    TE_LAVASPLASH      Cthon awakes and falls dead
 11    TE_TELEPORT        teleport end
 // large entity is a 2 dimensional entity.
- 5    TE_LIGHTNING1      flash of the Shambler
- 6    TE_LIGHTNING2      flash of the Thunderbolt
- 9    TE_LIGHTNING3      flash in e1m7 to kill Chthon
+ 5    TE_LIGHTNING1      bolt of the Shambler
+ 6    TE_LIGHTNING2      bolt of the Thunderbolt
+ 9    TE_LIGHTNING3      bolt in e1m7 to kill Cthon
 </pre>
 
 
@@ -48,7 +48,7 @@ Those values are meant to be used with the function
 <h4>5.3 <A NAME="d_attenuate">Sound Attenuation</A></h4>
 
 <p><pre>
-<b><a name="ATTN_NONE">ATTN_NONE</a></b> = 0;    // full volume everywhere in the leve
+<b><a name="ATTN_NONE">ATTN_NONE</a></b> = 0;    // full volume everywhere in the level, player death sounds in DM
 <b><a name="ATTN_NORM">ATTN_NORM</a></b> = 1;    // normal sound
 <b><a name="ATTN_IDLE">ATTN_IDLE</a></b> = 2;    // monster "idle" sounds
 <b><a name="ATTN_STATIC">ATTN_STATIC</a></b> = 3;  // used mostly by <a href="qc-built.htm#ambientsound" target="content">ambientsound</a> static sound entities
