--- a/qc-defs.htm
+++ b/qc-defs.htm
@@ -6,7 +6,7 @@
 
 <H1><FONT COLOR="#007F00"><A NAME="QC-DEFS">5. Built-in Constants</A></FONT></H1>
 
-<p>This file tries to give some additional details about the definitions 
+<p>This file gives some additional details about the definitions 
 in defs.qc.</p>
 
 
