--- a/index_fr1.htm
+++ b/index_fr1.htm
@@ -28,6 +28,20 @@ Category: WIP</p>
 <ol>
 <table width="400"><td style="text-align:left"><a href="qcman10.txt">Quake-C manual</a></td><td style="text-align:right"><small>v [1.0]</small></td></table>
 </ol>
+
+<h3>entity definition</h3>
+
+<ol>
+<table width="400"><tr><td style="text-align:left"><a href="entities.def">entities.def</a> <small>(GTK radiant)</small></td><td style="text-align:right" width="60"><small>v [1.8.1]</small></td></tr>
+<tr><td><small>This is a master file of every quake [*] entity.  Ever.  Can be divided into smaller files by section labels.<br>Works with any QUAKED enabled editor.</small></td></tr></table>
+</ol>
+
+<h3>various</h3>
+
+<ol>
+<table width="400"><td style="text-align:left"><a href="qfaq.html">Quake FAQ</a></td><td style="text-align:right"><small>v [2.0]</small></td></table>
+</ol>
+
 <br>
 <br>
 Live quake developement at moddb.com <a href="http://www.moddb.com/groups/qc" target="_blank"><font color="red">.QC group</font></a> --- <a href="http://www.moddb.com/groups/qc/forum" target="_blank">Forums</a>
