post upd - vars changes

--- a/index.htm
+++ b/index.htm
@@ -14,8 +14,9 @@
 <noframes>
 <h1>Quake Documentation Version 3.4.1</h1>
 
-<p>Main reference.  An vain attempt to provide all Quake specifications.<br>
+<p>Main reference.  A vain attempt to provide all Quake specifications.<br>
 See also the DEM Specs, the last MAP specs, and the Quake-C functions manual.<br>
+Credit goes to authors and editors of documentation as indicated within.<br>
 Category: WIP</p>
 
 <h3>single page version</h3>
@@ -32,7 +33,13 @@ Category: WIP</p>
 <ol>
 <li><a href="qcman10.txt">Quake-C manual</a> <small>v [1.0]</small>
 </ol>
-
+<br>
+<br>
+Live quake developement at moddb.com <a href="http://www.moddb.com/groups/qc" target="_blank"><font color="red">.QC group</font></a> --- <a href="http://www.moddb.com/groups/qc/forum" target="_blank">Forums</a>
+<br>
+Source forge hub: <a href="https://sourceforge.net/p/quake-c/" target="_blank">Quake C main</a> --- <a href="https://sourceforge.net/p/quake-c/mailman/quake-c-users/" target="_blank">Mail list</a>
+<br>
+<br>
 <hr align="left" width="666">
 
 <table width="666">
