qc manual math funcs link fix

--- a/qc-menu.htm
+++ b/qc-menu.htm
@@ -91,7 +91,7 @@
   
 <TR VALIGN=TOP><TD>8.</TD><TD><a href="qc-built.htm#QC-BUILT" target="content">Quake-C Built-in functions</A>
 </TD><TD><TABLE>
-<TR><TD>8.1</TD><TD> <A HREF="QC-BMATH">Math functions</A>
+<TR><TD>8.1</TD><TD> <A HREF="qc-built.htm#QC-BMATH">Math functions</A>
 </TD></TR>
 <TR><TD>8.2</TD><TD> <a href="qc-built.htm#QC-BVEC" target="content">Vector maths</A>
 </TD></TR>
