q doc update - qcc precompiler directives

--- a/index_fr1.htm
+++ b/index_fr1.htm
@@ -15,12 +15,12 @@ Category: WIP</p>
 </ol>
 
 <h3>single page version</h3>
-<small>(Links open in a new tab)</small>
 
 <ol>
 <table width="400"><td style="text-align:left"><a href="qkmenu.htm">Quake Specifications</a></td><td style="text-align:right"><small>v [3.4]</small></td></table>
 <table width="400"><td style="text-align:left"><a href="qc-menu.htm">Quake-C specifications</a></td><td style="text-align:right"><small>v [1.0]</small></td></table>
 <table width="400"><td style="text-align:left"><a href="progs.htm">Quake-C code</a></td><td style="text-align:right"><small>v [1.01]</small></td></table>
+<table width="400"><td style="text-align:left"><a href="precompiler.html">FTE qcc precompiler detail</a></td><td style="text-align:right"><small>v [1.0]</small></td></table>
 </ol>
 
 <h3>text version</h3>
