--- a/qc-title.htm
+++ b/qc-title.htm
@@ -54,7 +54,7 @@ are copyright (c) 1996, id software</b>.
 <b>1.00</b> and <b>1.01</b>. Future versions may differ a lot.</p>
 
 <p>If you wish to know more about what each Quake-C functions does, 
-please get the last version of the <b>Quake-C manual</b>, byt the Quake-C consortium.
+please get the last version of the <b>Quake-C manual</b>, by the Quake-C consortium.
 </p>
 
 
