--- a/precompiler.html
+++ b/precompiler.html
@@ -14,7 +14,7 @@
 
 </style>
 
-<!--[if lt IE 7]><style type="text/css">body{behavior:url("/wiki/skins/vector/csshover.min.htc")}</style><![endif]--></head>
+</head>
 <body class="mediawiki ltr sitedir-ltr ns-0 ns-subject page-Precompiler_definitions skin-vector action-view" bgcolor="#ffffff">
 		<!-- content -->
 		<div id="content" class="mw-body">
