--- a/index.htm
+++ b/index.htm
@@ -28,9 +28,10 @@ Category: WIP</p>
 <li><a href="progs.htm">Quake-C code</a> <small>v [1.01]</small>
 </ol>
 
-<h3>text version</h3>
+<h3>html/text version</h3>
 
 <ol>
+<li><a href="qcmanual.html">Quake-C 1 pg html</a> <small>v [1.0h]</small>
 <li><a href="qcman10.txt">Quake-C manual</a> <small>v [1.0]</small>
 </ol>
 <br>
