added qcmanual.html as extra reference one pg vers 3.4.3

--- a/index_fr1.htm
+++ b/index_fr1.htm
@@ -1,5 +1,5 @@
 <body bgcolor="#a6d1af">
-<h1>Quake Documentation Version 3.4.2</h1>
+<h1>Quake Documentation Version 3.4.3</h1>
 
 <p>Main reference.  A vain attempt to provide all Quake specifications.<br>
 See also the DEM Specs, the last MAP specs, and the Quake-C functions manual.<br>
@@ -14,7 +14,7 @@ Category: WIP</p>
 <table width="400"><td style="text-align:left"><a href="index2.htm">Quake-C code + manual</a></td><td style="text-align:right"><small>v [1.01]</small></td></table>
 </ol>
 
-<h3>single page version</h3>
+<h3>single frame version</h3>
 
 <ol>
 <table width="400"><td style="text-align:left"><a href="qkmenu.htm">Quake Specifications</a></td><td style="text-align:right"><small>v [3.4]</small></td></table>
@@ -23,9 +23,10 @@ Category: WIP</p>
 <table width="400"><td style="text-align:left"><a href="precompiler.html">FTE qcc precompiler detail</a></td><td style="text-align:right"><small>v [1.0]</small></td></table>
 </ol>
 
-<h3>text version</h3>
+<h3>one page version</h3>
 
 <ol>
+<table width="400"><td style="text-align:left"><a href="qcmanual.html">Quake-C html</a></td><td style="text-align:right"><small>v [1.0h]</small></td></table>
 <table width="400"><td style="text-align:left"><a href="qcman10.txt">Quake-C manual</a></td><td style="text-align:right"><small>v [1.0]</small></td></table>
 </ol>
 <br>
